// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rangeInput expect to render with custom classNames 1`] = `
{
  "cssClasses": {
    "form": "ais-RangeInput-form form",
    "input": "ais-RangeInput-input input",
    "inputMax": "ais-RangeInput-input--max inputMax",
    "inputMin": "ais-RangeInput-input--min inputMin",
    "label": "ais-RangeInput-label label",
    "noRefinement": "ais-RangeInput--noRefinement",
    "root": "ais-RangeInput root",
    "separator": "ais-RangeInput-separator separator",
    "submit": "ais-RangeInput-submit submit",
  },
  "max": 0,
  "min": 0,
  "refine": [Function],
  "step": 1,
  "templateProps": {
    "templates": {
      "separatorText": [Function],
      "submitText": [Function],
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "separatorText": false,
      "submitText": false,
    },
  },
  "values": {
    "max": undefined,
    "min": undefined,
  },
}
`;

exports[`rangeInput expect to render with custom templates 1`] = `
{
  "cssClasses": {
    "form": "ais-RangeInput-form",
    "input": "ais-RangeInput-input",
    "inputMax": "ais-RangeInput-input--max",
    "inputMin": "ais-RangeInput-input--min",
    "label": "ais-RangeInput-label",
    "noRefinement": "ais-RangeInput--noRefinement",
    "root": "ais-RangeInput",
    "separator": "ais-RangeInput-separator",
    "submit": "ais-RangeInput-submit",
  },
  "max": 0,
  "min": 0,
  "refine": [Function],
  "step": 1,
  "templateProps": {
    "templates": {
      "separatorText": "custom separator",
      "submitText": "custom submit",
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "separatorText": true,
      "submitText": true,
    },
  },
  "values": {
    "max": undefined,
    "min": undefined,
  },
}
`;

exports[`rangeInput expect to render with refinement 1`] = `
{
  "cssClasses": {
    "form": "ais-RangeInput-form",
    "input": "ais-RangeInput-input",
    "inputMax": "ais-RangeInput-input--max",
    "inputMin": "ais-RangeInput-input--min",
    "label": "ais-RangeInput-label",
    "noRefinement": "ais-RangeInput--noRefinement",
    "root": "ais-RangeInput",
    "separator": "ais-RangeInput-separator",
    "submit": "ais-RangeInput-submit",
  },
  "max": 500,
  "min": 10,
  "refine": [Function],
  "step": 1,
  "templateProps": {
    "templates": {
      "separatorText": [Function],
      "submitText": [Function],
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "separatorText": false,
      "submitText": false,
    },
  },
  "values": {
    "max": 475,
    "min": 25,
  },
}
`;

exports[`rangeInput expect to render with refinement at boundaries 1`] = `
{
  "cssClasses": {
    "form": "ais-RangeInput-form",
    "input": "ais-RangeInput-input",
    "inputMax": "ais-RangeInput-input--max",
    "inputMin": "ais-RangeInput-input--min",
    "label": "ais-RangeInput-label",
    "noRefinement": "ais-RangeInput--noRefinement",
    "root": "ais-RangeInput",
    "separator": "ais-RangeInput-separator",
    "submit": "ais-RangeInput-submit",
  },
  "max": 500,
  "min": 10,
  "refine": [Function],
  "step": 1,
  "templateProps": {
    "templates": {
      "separatorText": [Function],
      "submitText": [Function],
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "separatorText": false,
      "submitText": false,
    },
  },
  "values": {
    "max": undefined,
    "min": undefined,
  },
}
`;

exports[`rangeInput expect to render with results 1`] = `
{
  "cssClasses": {
    "form": "ais-RangeInput-form",
    "input": "ais-RangeInput-input",
    "inputMax": "ais-RangeInput-input--max",
    "inputMin": "ais-RangeInput-input--min",
    "label": "ais-RangeInput-label",
    "noRefinement": "ais-RangeInput--noRefinement",
    "root": "ais-RangeInput",
    "separator": "ais-RangeInput-separator",
    "submit": "ais-RangeInput-submit",
  },
  "max": 500,
  "min": 10,
  "refine": [Function],
  "step": 1,
  "templateProps": {
    "templates": {
      "separatorText": [Function],
      "submitText": [Function],
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "separatorText": false,
      "submitText": false,
    },
  },
  "values": {
    "max": undefined,
    "min": undefined,
  },
}
`;

exports[`rangeInput expect to render without results 1`] = `
{
  "cssClasses": {
    "form": "ais-RangeInput-form",
    "input": "ais-RangeInput-input",
    "inputMax": "ais-RangeInput-input--max",
    "inputMin": "ais-RangeInput-input--min",
    "label": "ais-RangeInput-label",
    "noRefinement": "ais-RangeInput--noRefinement",
    "root": "ais-RangeInput",
    "separator": "ais-RangeInput-separator",
    "submit": "ais-RangeInput-submit",
  },
  "max": 0,
  "min": 0,
  "refine": [Function],
  "step": 1,
  "templateProps": {
    "templates": {
      "separatorText": [Function],
      "submitText": [Function],
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "separatorText": false,
      "submitText": false,
    },
  },
  "values": {
    "max": undefined,
    "min": undefined,
  },
}
`;
